# react-native-checkbox

./: .gitignore  OAT.xml  README.md  package.json  react-native-oh-library-checkbox-0.5.16-0.0.1.tgz  react-native-oh-library-checkbox-0.5.16-1.0.3.tgz  tsconfig.json
doc/: en.md  zh-cn.md
example/: App.js  App.tsx  index.js  package.json
example/harmony/: build-profile.template.json5  oh-package.json5
example/harmony/checkbox/: index.ets  oh-package.json5  ts.ts
example/harmony/checkbox/src/main/: module.json5
example/harmony/checkbox/src/main/cpp/: CMakeLists.txt
example/harmony/checkbox/src/main/ets/: RNCCheckBoxPackage.ts
example/harmony/entry/: oh-package.json5
example/harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp
example/harmony/entry/src/main/ets/: RNPackagesFactory.ets
example/harmony/entry/src/main/ets/entryability/: EntryAbility.ets
example/harmony/entry/src/main/ets/pages/: Index.ets
example/src/: checkboxTest.tsx  constants.ts
harmony/: checkbox.har
harmony/checkbox/: BuildProfile.ets  OAT.xml  README.OpenSource  index.ets  oh-package.json5  ts.ts
harmony/checkbox/src/main/cpp/: CMakeLists.txt  CheckboxPackage.h  ComponentDescriptors.h  EventEmiRequestHandler.h  EventEmitters.cpp  EventEmitters.h  JSIBinder.h  NapiBinder.h  Props.cpp  Props.h  ShadowNodes.h  States.cpp  States.h
harmony/checkbox/src/main/ets/: Logger.ets  RNCCheckBoxPackage.ts  RNCCheckbox.ets
js/: CheckBox.tsx  RNCCheckboxNativeComponent.ts
src/: RNCCheckboxNativeComponent.ts  index.tsx
typings/: index.d.ts
